# magnum_carl

./: .gitignore  CMakeLists.txt  README.md  bitboard.cpp  bitboard.hpp  board.cpp  board.hpp  castle_perms.hpp  logger.hpp  magic.hpp  main.cpp  move.hpp  perft.hpp  piece.hpp  random.hpp  search.hpp  square.hpp  transposition_table.cpp  transposition_table.hpp  uci.hpp  util.hpp
tests/: perft.txt  short_perft.txt  test_perft.hpp
